# vision-connector-sdk-and-plugin-examples

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  PluginConcept.md  README.md  build_drivers.sh  build_drivers_with_docker.bat  build_drivers_with_docker.sh  scaffolding.sh
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: creating_and_using_a_custom_camera_connector.md  development_environment.md  repository_overview.md  vca_sdk.md
drivers/allied/: CMakeLists.txt  build.sh
drivers/allied/src/: alliedCamera.cpp  alliedCamera.h  alliedConnector.cpp  alliedConnector.h
drivers/allied/tests/: CMakeLists.txt  testMain.cpp
drivers/basler/: CMakeLists.txt  build.sh
drivers/basler/src/: baslerCamera.cpp  baslerCamera.h  baslerConnector.cpp  baslerConnector.h
drivers/basler/tests/: testMain.cpp
drivers/baslerll/: CMakeLists.txt  build.sh
drivers/baslerll/src/: baslerllApi.cpp  baslerllApi.h  baslerllCamera.cpp  baslerllCamera.h  baslerllConnector.cpp  baslerllConnector.h  baslerllPluginLogger.h
drivers/baslerll/tests/: CMakeLists.txt  testMain.cpp
drivers/daheng/: CMakeLists.txt  build.sh
drivers/daheng/src/: DahengApi.cpp  DahengApi.h  DahengCamera.cpp  DahengCamera.h  DahengConnector.cpp  DahengConnector.h  DahengPluginLogger.h
drivers/daheng/tests/: testMain.cpp
drivers/globbing/: CMakeLists.txt  build.sh
drivers/globbing/src/: GlobbingApi.cpp  GlobbingApi.h  GlobbingCamera.cpp  GlobbingCamera.h  GlobbingCameraConnector.cpp  GlobbingCameraConnector.h  GlobbingPluginLogger.h
drivers/globbing/tests/: CMakeLists.txt  TestGlobbingCamera.cpp  TestGlobbingCameraConnector.cpp
drivers/numbers/: CMakeLists.txt  build.sh
drivers/numbers/src/: NumbersApi.cpp  NumbersApi.h  NumbersCamera.cpp  NumbersCamera.h  NumbersCameraConnector.cpp  NumbersCameraConnector.h  NumbersPluginLogger.h
drivers/numbers/tests/: CMakeLists.txt  TestNumbersCamera.cpp  TestNumbersCameraConnector.cpp  testMain.cpp
drivers/numberswithfilelogger/: CMakeLists.txt  build.sh
drivers/numberswithfilelogger/src/: NumbersWithFileLoggerApi.cpp  NumbersWithFileLoggerApi.h  NumbersWithFileLoggerCamera.cpp  NumbersWithFileLoggerCamera.h  NumbersWithFileLoggerConnector.cpp  NumbersWithFileLoggerConnector.h  NumbersWithFileLoggerPluginLogger.cpp  NumbersWithFileLoggerPluginLogger.h
drivers/numberswithfilelogger/tests/: CMakeLists.txt  TestNumbersWithFileLoggerCamera.cpp  TestNumbersWithFileLoggerCameraConnector.cpp  testMain.cpp
requirements/: install_build_requirements.sh  install_clangd_language_server_16_0_2.sh  install_cmake_3_21_7.sh  install_opencv.sh  install_test_requirements.sh
sdk/: info.txt
sdk/include/: Camera.h  CameraConnector.h  CameraParameter.h  CameraParameterStatus.h  CameraStatus.h  Image.h  ImageDetail.h  ImageMetadata.h  Object.h  PluginLogger.h
src/: CMakePresets.json  Dockerfile  ReadMe_OSS_Multilingual.html  scaffolding.sh
src/drivers/daheng/include/: GxIAPI.h
src/drivers/daheng/src/: DahengCamera.cpp  DahengConnector.cpp
src/drivers/daheng/tests/: CMakeLists.txt
src/requirements/: install_build_requirements.sh  install_clangd_language_server_16_0_2.sh  install_opencv.sh  install_test_requirements.sh
src/sdk/: info.txt
src/sdk/include/: Camera.h  CameraConnector.h  CameraException.h  CameraParameter.h  CameraParameterStatus.h  CameraStatus.h  Image.h  ImageDetail.h  ImageMetadata.h  Object.h  ObjectContainer.h
src/template/: CMakeLists.txt  build.sh
src/template/src/: TemplateApi.h  TemplateConnector.cpp  TemplateConnector.h
src/template/tests/: testMain.cpp
template/: build.sh
template/src/: TemplateApi.cpp  TemplateCamera.cpp  TemplateCamera.h  TemplateConnector.cpp  TemplateConnector.h  TemplatePluginLogger.h
template/tests/: CMakeLists.txt
